collapse several ubuntu keys

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -112,13 +112,19 @@ pydocstyle:
     buster: [pydocstyle]
     stretch: [pydocstyle]
   ubuntu:
+    artful: [pydocstyle]
+    bionic: [pydocstyle]
     xenial: [pydocstyle]
+    zesty: [pydocstyle]
 pyflakes3:
   debian:
     buster: [pyflakes3]
     stretch: [pyflakes3]
   ubuntu:
+    artful: [pyflakes3]
+    bionic: [pyflakes3]
     xenial: [pyflakes3]
+    zesty: [pyflakes3]
 pyper-pip:
   ubuntu:
     pip:
@@ -161,18 +167,7 @@ pyside-tools:
   debian: [pyside-tools]
   fedora: [pyside-tools]
   gentoo: [dev-python/pyside-tools]
-  ubuntu:
-    lucid: [pyside-tools]
-    maverick: [pyside-tools]
-    natty: [pyside-tools]
-    oneiric: [pyside-tools]
-    precise: [pyside-tools]
-    quantal: [pyside-tools]
-    raring: [pyside-tools]
-    saucy: [pyside-tools]
-    trusty: [pyside-tools]
-    utopic: [pyside-tools]
-    vivid: [pyside-tools]
+  ubuntu: [pyside-tools]
 python:
   arch: [python2]
   cygwin: [python]
@@ -237,12 +232,7 @@ python-amqp:
     stretch: [python-amqp]
   fedora: [python-amqp]
   gentoo: [dev-python/py-amqp]
-  ubuntu:
-    trusty: [python-amqp]
-    utopic: [python-amqp]
-    vivid: [python-amqp]
-    wily: [python-amqp]
-    xenial: [python-amqp]
+  ubuntu: [python-amqp]
 python-annoy-pip:
   debian:
     pip:
@@ -370,13 +360,7 @@ python-babel:
   debian: [python-babel]
   fedora: [python-babel]
   gentoo: [dev-python/Babel]
-  ubuntu:
-    precise: [python-babel]
-    trusty: [python-babel]
-    utopic: [python-babel]
-    vivid: [python-babel]
-    wily: [python-babel]
-    xenial: [python-babel]
+  ubuntu: [python-babel]
 python-backports.ssl-match-hostname:
   debian: [python-backports.ssl-match-hostname]
   fedora: [python-backports.ssl-match-hostname]
@@ -404,8 +388,11 @@ python-bitstring:
     stretch: [python-bitstring]
   gentoo: [dev-python/bitstring]
   ubuntu:
+    artful: [python-bitstring]
+    bionic: [python-bitstring]
     wily: [python-bitstring]
     xenial: [python-bitstring]
+    zesty: [python-bitstring]
 python-bitstring-pip:
   debian:
     pip:
@@ -546,8 +533,11 @@ python-certifi:
   fedora: [python-certifi]
   gentoo: [dev-python/certifi]
   ubuntu:
+    artful: [python-certifi]
+    bionic: [python-certifi]
     xenial: [python-certifi]
     yakkety: [python-certifi]
+    zesty: [python-certifi]
 python-chainer-pip:
   debian:
     pip:
@@ -592,16 +582,7 @@ python-clearsilver:
   centos: [python-clearsilver]
   debian: [python-clearsilver]
   fedora: [python-clearsilver]
-  ubuntu:
-    lucid: [python-clearsilver]
-    maverick: [python-clearsilver]
-    natty: [python-clearsilver]
-    oneiric: [python-clearsilver]
-    precise: [python-clearsilver]
-    quantal: [python-clearsilver]
-    raring: [python-clearsilver]
-    saucy: [python-clearsilver]
-    trusty: [python-clearsilver]
+  ubuntu: [python-clearsilver]
 python-click:
   debian:
     buster: [python-click]
@@ -643,18 +624,7 @@ python-colorama:
   osx:
     pip:
       packages: [colorama]
-  ubuntu:
-    artful: [python-colorama]
-    quantal: [python-colorama]
-    raring: [python-colorama]
-    saucy: [python-colorama]
-    trusty: [python-colorama]
-    utopic: [python-colorama]
-    vivid: [python-colorama]
-    wily: [python-colorama]
-    xenial: [python-colorama]
-    yakkety: [python-colorama]
-    zesty: [python-colorama]
+  ubuntu: [python-colorama]
 python-concurrent.futures:
   debian: [python-concurrent.futures]
   fedora: [python-futures]
@@ -783,21 +753,7 @@ python-dateutil:
   osx:
     pip:
       packages: [python-dateutil]
-  ubuntu:
-    lucid: [python-dateutil]
-    maverick: [python-dateutil]
-    natty: [python-dateutil]
-    oneiric: [python-dateutil]
-    precise: [python-dateutil]
-    quantal: [python-dateutil]
-    raring: [python-dateutil]
-    saucy: [python-dateutil]
-    trusty: [python-dateutil]
-    utopic: [python-dateutil]
-    vivid: [python-dateutil]
-    wily: [python-dateutil]
-    xenial: [python-dateutil]
-    yakkety: [python-dateutil]
+  ubuntu: [python-dateutil]
 python-deap-pip:
   debian:
     pip: [deap]
@@ -914,24 +870,7 @@ python-empy:
   slackware:
     pip:
       packages: [empy]
-  ubuntu:
-    artful: [python-empy]
-    bionic: [python-empy]
-    lucid: [python-empy]
-    maverick: [python-empy]
-    natty: [python-empy]
-    oneiric: [python-empy]
-    precise: [python-empy]
-    quantal: [python-empy]
-    raring: [python-empy]
-    saucy: [python-empy]
-    trusty: [python-empy]
-    utopic: [python-empy]
-    vivid: [python-empy]
-    wily: [python-empy]
-    xenial: [python-empy]
-    yakkety: [python-empy]
-    zesty: [python-empy]
+  ubuntu: [python-empy]
 python-enum:
   debian:
     jessie: [python-enum]
@@ -1411,18 +1350,7 @@ python-imaging:
 python-impacket:
   debian: [python-impacket]
   fedora: [python-impacket]
-  ubuntu:
-    lucid: [python-impacket]
-    maverick: [python-impacket]
-    natty: [python-impacket]
-    oneiric: [python-impacket]
-    precise: [python-impacket]
-    quantal: [python-impacket]
-    raring: [python-impacket]
-    saucy: [python-impacket]
-    trusty: [python-impacket]
-    utopic: [python-impacket]
-    vivid: [python-impacket]
+  ubuntu: [python-impacket]
 python-inject-pip:
   ubuntu:
     pip:
@@ -1490,22 +1418,7 @@ python-kitchen:
   osx:
     pip:
       packages: [kitchen]
-  ubuntu:
-    lucid: [python-kitchen]
-    maverick: [python-kitchen]
-    natty: [python-kitchen]
-    oneiric: [python-kitchen]
-    precise: [python-kitchen]
-    quantal: [python-kitchen]
-    raring: [python-kitchen]
-    saucy: [python-kitchen]
-    trusty: [python-kitchen]
-    utopic: [python-kitchen]
-    vivid: [python-kitchen]
-    wily: [python-kitchen]
-    xenial: [python-kitchen]
-    yakkety: [python-kitchen]
-    zesty: [python-kitchen]
+  ubuntu: [python-kitchen]
 python-kombu-pip:
   ubuntu:
     pip:
@@ -1519,16 +1432,7 @@ python-libpcap:
   debian: [python-libpcap]
   fedora: [pylibpcap]
   gentoo: [dev-python/pylibpcap]
-  ubuntu:
-    lucid: [python-libpcap]
-    maverick: [python-libpcap]
-    natty: [python-libpcap]
-    oneiric: [python-libpcap]
-    precise: [python-libpcap]
-    quantal: [python-libpcap]
-    raring: [python-libpcap]
-    saucy: [python-libpcap]
-    trusty: [python-libpcap]
+  ubuntu: [python-libpcap]
 python-libpgm-pip:
   osx:
     pip:
@@ -1647,18 +1551,7 @@ python-mechanize:
   debian: [python-mechanize]
   fedora: [python-mechanize]
   gentoo: [dev-python/mechanize]
-  ubuntu:
-    lucid: [python-mechanize]
-    maverick: [python-mechanize]
-    natty: [python-mechanize]
-    oneiric: [python-mechanize]
-    precise: [python-mechanize]
-    quantal: [python-mechanize]
-    raring: [python-mechanize]
-    saucy: [python-mechanize]
-    trusty: [python-mechanize]
-    wily: [python-mechanize]
-    xenial: [python-mechanize]
+  ubuntu: [python-mechanize]
 python-mock:
   arch: [python2-mock]
   debian: [python-mock]
@@ -1894,11 +1787,7 @@ python-numpydoc:
   debian: [python-numpydoc]
   gentoo: [dev-python/numpydoc]
   opensuse: [python-numpydoc]
-  ubuntu:
-    artful: [python-numpydoc]
-    trusty: [python-numpydoc]
-    xenial: [python-numpydoc]
-    zesty: [python-numpydoc]
+  ubuntu: [python-numpydoc]
 python-oauth2:
   arch: [python-oauth2]
   debian:
@@ -1917,12 +1806,7 @@ python-oauth2client:
   debian: [python-oauth2client]
   fedora: [python-oauth2client]
   gentoo: [dev-python/oauth2client]
-  ubuntu:
-    trusty: [python-oauth2client]
-    utopic: [python-oauth2client]
-    vivid: [python-oauth2client]
-    wily: [python-oauth2client]
-    xenial: [python-oauth2client]
+  ubuntu: [python-oauth2client]
 python-omniorb:
   arch: [omniorbpy]
   debian: [python-omniorb, python-omniorb-omg, omniidl-python]
@@ -2006,22 +1890,7 @@ python-paramiko:
       packages: [paramiko]
   rhel: [python-paramiko]
   slackware: [paramiko]
-  ubuntu:
-    lucid: [python-paramiko]
-    maverick: [python-paramiko]
-    natty: [python-paramiko]
-    oneiric: [python-paramiko]
-    precise: [python-paramiko]
-    quantal: [python-paramiko]
-    raring: [python-paramiko]
-    saucy: [python-paramiko]
-    trusty: [python-paramiko]
-    utopic: [python-paramiko]
-    vivid: [python-paramiko]
-    wily: [python-paramiko]
-    xenial: [python-paramiko]
-    yakkety: [python-paramiko]
-    zesty: [python-paramiko]
+  ubuntu: [python-paramiko]
 python-passlib:
   debian: [python-passlib]
   fedora: [python-passlib]
@@ -2052,18 +1921,7 @@ python-pcapy:
   debian: [python-pcapy]
   fedora: [pcapy]
   gentoo: [dev-python/pcapy]
-  ubuntu:
-    lucid: [python-pcapy]
-    maverick: [python-pcapy]
-    natty: [python-pcapy]
-    oneiric: [python-pcapy]
-    precise: [python-pcapy]
-    quantal: [python-pcapy]
-    raring: [python-pcapy]
-    saucy: [python-pcapy]
-    trusty: [python-pcapy]
-    utopic: [python-pcapy]
-    vivid: [python-pcapy]
+  ubuntu: [python-pcapy]
 python-pep8:
   arch: [python2-pep8]
   debian: [pep8]
@@ -2288,22 +2146,7 @@ python-pydot:
     pip:
       packages: [pydot]
   slackware: [pydot]
-  ubuntu:
-    lucid: [python-pydot]
-    maverick: [python-pydot]
-    natty: [python-pydot]
-    oneiric: [python-pydot]
-    precise: [python-pydot]
-    quantal: [python-pydot]
-    raring: [python-pydot]
-    saucy: [python-pydot]
-    trusty: [python-pydot]
-    utopic: [python-pydot]
-    vivid: [python-pydot]
-    wily: [python-pydot]
-    xenial: [python-pydot]
-    yakkety: [python-pydot]
-    zesty: [python-pydot]
+  ubuntu: [python-pydot]
 python-pyftpdlib:
   debian: [python-pyftpdlib]
   gentoo: [dev-python/pyftpdlib]
@@ -2351,22 +2194,7 @@ python-pygraphviz:
     pip:
       packages: [pygraphviz]
   slackware: [pygraphviz]
-  ubuntu:
-    lucid: [python-pygraphviz]
-    maverick: [python-pygraphviz]
-    natty: [python-pygraphviz]
-    oneiric: [python-pygraphviz]
-    precise: [python-pygraphviz]
-    quantal: [python-pygraphviz]
-    raring: [python-pygraphviz]
-    saucy: [python-pygraphviz]
-    trusty: [python-pygraphviz]
-    utopic: [python-pygraphviz]
-    vivid: [python-pygraphviz]
-    wily: [python-pygraphviz]
-    xenial: [python-pygraphviz]
-    yakkety: [python-pygraphviz]
-    zesty: [python-pygraphviz]
+  ubuntu: [python-pygraphviz]
 python-pyinotify:
   debian: [python-pyinotify]
   fedora: [python-inotify]
@@ -2412,13 +2240,7 @@ python-pymavlink:
 python-pymodbus:
   debian: [python-pymodbus]
   fedora: [pymodbus]
-  ubuntu:
-    precise: [python-pymodbus]
-    raring: [python-pymodbus]
-    saucy: [python-pymodbus]
-    trusty: [python-pymodbus]
-    wily: [python-pymodbus]
-    xenial: [python-pymodbus]
+  ubuntu: [python-pymodbus]
 python-pymongo:
   arch: [python2-pymongo]
   debian: [python-pymongo]
@@ -2627,40 +2449,14 @@ python-qt-bindings-gl:
   fedora: [PyQt4]
   gentoo: ['dev-python/pyside[opengl]', 'dev-python/PyQt4[opengl]']
   opensuse: [python-qt4-devel]
-  ubuntu:
-    lucid: [python-qt4-gl]
-    maverick: [python-qt4-gl]
-    natty: [python-qt4-gl]
-    oneiric: [python-qt4-gl]
-    precise: [python-qt4-gl]
-    quantal: [python-qt4-gl]
-    raring: [python-qt4-gl]
-    saucy: [python-qt4-gl]
-    trusty: [python-qt4-gl]
-    utopic: [python-qt4-gl]
-    vivid: [python-qt4-gl]
-    wily: [python-qt4-gl]
-    xenial: [python-qt4-gl]
+  ubuntu: [python-qt4-gl]
 python-qt-bindings-qwt5:
   arch: [python2-pyqwt]
   debian: [python-qwt5-qt4]
   fedora: [PyQwt-devel]
   gentoo: ['dev-python/pyqwt:5']
   macports: [qwt52]
-  ubuntu:
-    lucid: [python-qwt5-qt4]
-    maverick: [python-qwt5-qt4]
-    natty: [python-qwt5-qt4]
-    oneiric: [python-qwt5-qt4]
-    precise: [python-qwt5-qt4]
-    quantal: [python-qwt5-qt4]
-    raring: [python-qwt5-qt4]
-    saucy: [python-qwt5-qt4]
-    trusty: [python-qwt5-qt4]
-    utopic: [python-qwt5-qt4]
-    vivid: [python-qwt5-qt4]
-    wily: [python-qwt5-qt4]
-    xenial: [python-qwt5-qt4]
+  ubuntu: [python-qwt5-qt4]
 python-qt-bindings-webkit:
   debian: [python-qt4]
   fedora: [PyQt4]
@@ -2700,6 +2496,8 @@ python-qt5-bindings-gl:
   opensuse: [python-qt5]
   slackware: [PyQt5]
   ubuntu:
+    artful: [python-pyqt5.qtopengl]
+    bionic: [python-pyqt5.qtopengl]
     wily: [python-pyqt5.qtopengl]
     xenial: [python-pyqt5.qtopengl]
     yakkety: [python-pyqt5.qtopengl]
@@ -2714,6 +2512,8 @@ python-qt5-bindings-webkit:
   freebsd: [py27-qt5-webkit]
   gentoo: ['dev-python/PyQt5[webkit]']
   ubuntu:
+    artful: [python-pyqt5.qtwebkit]
+    bionic: [python-pyqt5.qtwebkit]
     wily: [python-pyqt5.qtwebkit]
     xenial: [python-pyqt5.qtwebkit]
     yakkety: [python-pyqt5.qtwebkit]
@@ -2723,30 +2523,12 @@ python-qwt5-qt4:
   debian: [python-qwt5-qt4]
   fedora: [PyQwt]
   gentoo: ['dev-python/pyqwt:5']
-  ubuntu:
-    lucid: [python-qwt5-qt4]
-    maverick: [python-qwt5-qt4]
-    natty: [python-qwt5-qt4]
-    oneiric: [python-qwt5-qt4]
-    precise: [python-qwt5-qt4]
-    quantal: [python-qwt5-qt4]
-    raring: [python-qwt5-qt4]
-    saucy: [python-qwt5-qt4]
-    trusty: [python-qwt5-qt4]
+  ubuntu: [python-qwt5-qt4]
 python-rdflib:
   debian: [python-rdflib]
   fedora: [python-rdflib]
   gentoo: [dev-python/rdflib]
-  ubuntu:
-    lucid: [python-rdflib]
-    maverick: [python-rdflib]
-    natty: [python-rdflib]
-    oneiric: [python-rdflib]
-    precise: [python-rdflib]
-    quantal: [python-rdflib]
-    raring: [python-rdflib]
-    saucy: [python-rdflib]
-    trusty: [python-rdflib]
+  ubuntu: [python-rdflib]
 python-readchar-pip:
   ubuntu:
     pip:
@@ -3026,16 +2808,7 @@ python-scapy:
   debian: [python-scapy]
   fedora: [scapy]
   gentoo: [dev-python/scapy-python3]
-  ubuntu:
-    lucid: [python-scapy]
-    maverick: [python-scapy]
-    natty: [python-scapy]
-    oneiric: [python-scapy]
-    precise: [python-scapy]
-    quantal: [python-scapy]
-    raring: [python-scapy]
-    saucy: [python-scapy]
-    trusty: [python-scapy]
+  ubuntu: [python-scapy]
 python-scipy:
   arch: [python2-scipy]
   debian: [python-scipy]
@@ -3223,16 +2996,7 @@ python-six:
   debian: [python-six]
   fedora: [python-six]
   gentoo: [dev-python/six]
-  ubuntu:
-    artful: [python-six]
-    saucy: [python-six]
-    trusty: [python-six]
-    utopic: [python-six]
-    vivid: [python-six]
-    wily: [python-six]
-    xenial: [python-six]
-    yakkety: [python-six]
-    zesty: [python-six]
+  ubuntu: [python-six]
 python-skimage:
   debian: [python-skimage]
   fedora: [python-scikit-image]
@@ -3328,10 +3092,7 @@ python-sortedcontainers-pip:
 python-sparqlwrapper:
   debian: [python-sparqlwrapper]
   gentoo: [dev-python/sparql-wrapper]
-  ubuntu:
-    trusty: [python-sparqlwrapper]
-    utopic: [python-sparqlwrapper]
-    vivid: [python-sparqlwrapper]
+  ubuntu: [python-sparqlwrapper]
 python-speechrecognition-pip:
   debian:
     pip:
@@ -3424,16 +3185,7 @@ python-svn:
   debian: [python-svn]
   fedora: [pysvn]
   gentoo: [dev-python/pysvn]
-  ubuntu:
-    lucid: [python-svn]
-    maverick: [python-svn]
-    natty: [python-svn]
-    oneiric: [python-svn]
-    precise: [python-svn]
-    quantal: [python-svn]
-    raring: [python-svn]
-    saucy: [python-svn]
-    trusty: [python-svn]
+  ubuntu: [python-svn]
 python-sympy:
   debian: [python-sympy]
   fedora: [sympy]
@@ -3475,8 +3227,11 @@ python-tabulate:
     '24': [python-tabulate]
   gentoo: [dev-python/tabulate]
   ubuntu:
+    artful: [python-tabulate]
+    bionic: [python-tabulate]
     wily: [python-tabulate]
     xenial: [python-tabulate]
+    zesty: [python-tabulate]
 python-tabulate-pip:
   debian:
     pip:
@@ -3493,13 +3248,7 @@ python-tabulate-pip:
 python-tblib:
   debian: [python-tblib]
   gentoo: [dev-python/tblib]
-  ubuntu:
-    saucy: [python-tblib]
-    trusty: [python-tblib]
-    vivid: [python-tblib]
-    wily: [python-tblib]
-    xenial: [python-tblib]
-    yakkety: [python-tblib]
+  ubuntu: [python-tblib]
 python-telegram-bot:
   ubuntu:
     pip:
@@ -3720,18 +3469,7 @@ python-twisted-bin:
   arch: [python2-twisted]
   debian: [python-twisted-bin]
   fedora: [python-twisted-core]
-  ubuntu:
-    lucid: [python-twisted-bin]
-    maverick: [python-twisted-bin]
-    natty: [python-twisted-bin]
-    oneiric: [python-twisted-bin]
-    precise: [python-twisted-bin]
-    quantal: [python-twisted-bin]
-    raring: [python-twisted-bin]
-    saucy: [python-twisted-bin]
-    trusty: [python-twisted-bin]
-    wily: [python-twisted-bin]
-    xenial: [python-twisted-bin]
+  ubuntu: [python-twisted-bin]
 python-twisted-core:
   arch: [python2-twisted]
   debian: [python-twisted-core]
@@ -3743,18 +3481,7 @@ python-twisted-web:
   debian: [python-twisted-web]
   fedora: [python-twisted-web]
   gentoo: [dev-python/twisted-web]
-  ubuntu:
-    lucid: [python-twisted-web]
-    maverick: [python-twisted-web]
-    natty: [python-twisted-web]
-    oneiric: [python-twisted-web]
-    precise: [python-twisted-web]
-    quantal: [python-twisted-web]
-    raring: [python-twisted-web]
-    saucy: [python-twisted-web]
-    trusty: [python-twisted-web]
-    wily: [python-twisted-web]
-    xenial: [python-twisted-web]
+  ubuntu: [python-twisted-web]
 python-twitter:
   debian:
     buster: [python-twitter]
@@ -3762,16 +3489,7 @@ python-twitter:
     stretch: [python-twitter]
   fedora: [python-twitter]
   gentoo: [dev-python/python-twitter]
-  ubuntu:
-    lucid: [python-twitter]
-    maverick: [python-twitter]
-    natty: [python-twitter]
-    oneiric: [python-twitter]
-    precise: [python-twitter]
-    quantal: [python-twitter]
-    raring: [python-twitter]
-    saucy: [python-twitter]
-    trusty: [python-twitter]
+  ubuntu: [python-twitter]
 python-tz:
   arch: [python2-pytz]
   debian: [python-tz]
@@ -3910,6 +3628,7 @@ python-watchdog:
   debian: [python-watchdog]
   ubuntu:
     artful: [python-watchdog]
+    bionic: [python-watchdog]
     xenial: [python-watchdog]
     yakkety: [python-watchdog]
     zesty: [python-watchdog]
@@ -4009,6 +3728,7 @@ python-xmltodict:
   gentoo: [dev-python/xmltodict]
   ubuntu:
     artful: [python-xmltodict]
+    bionic: [python-xmltodict]
     xenial: [python-xmltodict]
     yakkety: [python-xmltodict]
     zesty: [python-xmltodict]
