add python-gtk2 keys for missing ubuntu distributions (#16812)
* add python-gtk2 keys for missing ubuntu distributions

* collapse python-gtk2 for ubuntu distributions

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1319,16 +1319,7 @@ python-gtk2:
     pip:
       packages: []
   rhel: [pygtk2]
-  ubuntu:
-    lucid: [python-gtk2]
-    maverick: [python-gtk2]
-    natty: [python-gtk2]
-    oneiric: [python-gtk2]
-    precise: [python-gtk2]
-    quantal: [python-gtk2]
-    raring: [python-gtk2]
-    saucy: [python-gtk2]
-    trusty: [python-gtk2]
+  ubuntu: [python-gtk2]
 python-h5py:
   debian: [python-h5py]
   fedora: [h5py]
