--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -177,6 +177,16 @@ repositories:
       url: https://github.com/ros/angles.git
       version: master
     status: maintained
+  apriltags2_ros:
+    doc:
+      type: git
+      url: https://github.com/dmalyuta/apriltags2_ros.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/dmalyuta/apriltags2_ros.git
+      version: master
+    status: maintained
   ar_track_alvar:
     doc:
       type: git
