--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -3687,6 +3687,11 @@ repositories:
       type: git
       url: https://github.com/SICKAG/sick_scan.git
       version: master
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/SICKAG/sick_scan-release.git
+      version: 0.0.11-0
     source:
       type: git
       url: https://github.com/SICKAG/sick_scan.git
