--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -14017,6 +14017,11 @@ repositories:
       type: git
       url: https://github.com/SICKAG/sick_scan.git
       version: master
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/SICKAG/sick_scan-release.git
+      version: 0.0.11-0
     source:
       type: git
       url: https://github.com/SICKAG/sick_scan.git
