--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -27,5 +27,20 @@ repositories:
       url: https://github.com/ros/catkin.git
       version: kinetic-devel
     status: maintained
+  genmsg:
+    doc:
+      type: git
+      url: https://github.com/ros/genmsg.git
+      version: indigo-devel
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/genmsg-release.git
+      version: 0.5.10-0
+    source:
+      type: git
+      url: https://github.com/ros/genmsg.git
+      version: indigo-devel
+    status: maintained
 type: distribution
 version: 2
