enable PR for teaching@indigo

--- a/indigo/lcas-dist.yaml
+++ b/indigo/lcas-dist.yaml
@@ -37,6 +37,7 @@ repositories:
       url: https://github.com/strands-project-releases/lcas_teaching.git
       version: 0.1.16-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/LCAS/teaching.git
       version: indigo-devel
