--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -12150,10 +12150,13 @@ repositories:
       url: https://github.com/DLu/roscompile.git
       version: master
     release:
+      packages:
+      - ros_introspection
+      - roscompile
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/wu-robotics/roscompile-release.git
-      version: 0.0.2-0
+      version: 1.0.0-0
     source:
       type: git
       url: https://github.com/DLu/roscompile.git
