ros_environment: 1.0.0-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7813,6 +7813,21 @@ repositories:
       url: https://github.com/code-iai/ros_emacs_utils.git
       version: master
     status: maintained
+  ros_environment:
+    doc:
+      type: git
+      url: https://github.com/ros/ros_environment.git
+      version: kinetic
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ros-gbp/ros_environment-release.git
+      version: 1.0.0-0
+    source:
+      type: git
+      url: https://github.com/ros/ros_environment.git
+      version: kinetic
+    status: maintained
   ros_explorer:
     release:
       tags:
