--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -2591,7 +2591,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/ros.git
-      version: lunar-devel
+      version: kinetic-devel
     release:
       packages:
       - mk
@@ -2613,7 +2613,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/ros.git
-      version: lunar-devel
+      version: kinetic-devel
     status: maintained
   ros_canopen:
     doc:
