add python-yaml for melodic

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3748,6 +3748,8 @@ python-yaml:
   rhel: [PyYAML]
   slackware: [PyYAML]
   ubuntu:
+    artful: [python-yaml]
+    bionic: [python-yaml]
     lucid: [python-yaml]
     maverick: [python-yaml]
     natty: [python-yaml]
