--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -57,6 +57,22 @@ repositories:
       url: https://github.com/RethinkRobotics-opensource/gennodejs.git
       version: kinetic-devel
     status: maintained
+  genpy:
+    doc:
+      type: git
+      url: https://github.com/ros/genpy.git
+      version: kinetic-devel
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/genpy-release.git
+      version: 0.6.7-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/genpy.git
+      version: kinetic-devel
+    status: maintained
   ros_environment:
     doc:
       type: git
