--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3326,6 +3326,16 @@ repositories:
       url: https://github.com/swri-robotics/imagezero_transport.git
       version: master
     status: maintained
+  imi_camera:
+    doc:
+      type: git
+      url: https://github.com/HUAJIEIMI/imi_ros.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/HUAJIEIMI/imi_ros.git
+      version: master
+    status: developed
   imu_pipeline:
     doc:
       type: git
