--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -27,6 +27,21 @@ repositories:
       url: https://github.com/ros/catkin.git
       version: kinetic-devel
     status: maintained
+  gencpp:
+    doc:
+      type: git
+      url: https://github.com/ros/gencpp.git
+      version: indigo-devel
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/gencpp-release.git
+      version: 0.6.0-0
+    source:
+      type: git
+      url: https://github.com/ros/gencpp.git
+      version: indigo-devel
+    status: maintained
   geneus:
     doc:
       type: git
