--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -134,6 +134,21 @@ repositories:
       url: https://github.com/ros/message_generation.git
       version: kinetic-devel
     status: maintained
+  message_runtime:
+    doc:
+      type: git
+      url: https://github.com/ros/message_runtime.git
+      version: groovy-devel
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/message_runtime-release.git
+      version: 0.4.12-0
+    source:
+      type: git
+      url: https://github.com/ros/message_runtime.git
+      version: groovy-devel
+    status: maintained
   ros_environment:
     doc:
       type: git
