add libpcl-all and libjpeg for debian buster

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1965,6 +1965,7 @@ libjaxp1.3-java:
 libjpeg:
   arch: [libjpeg-turbo]
   debian:
+    buster: [libjpeg-dev]
     jessie: [libjpeg62-turbo-dev]
     stretch: [libjpeg-dev]
     wheezy: [libjpeg8-dev]
@@ -2311,6 +2312,7 @@ libpcap:
 libpcl-all:
   arch: [pcl]
   debian:
+    buster: [libpcl-apps1.8, libpcl-common1.8, libpcl-features1.8, libpcl-filters1.8, libpcl-io1.8, libpcl-kdtree1.8, libpcl-keypoints1.8, libpcl-ml1.8, libpcl-octree1.8, libpcl-outofcore1.8, libpcl-people1.8, libpcl-recognition1.8, libpcl-registration1.8, libpcl-sample-consensus1.8, libpcl-search1.8, libpcl-segmentation1.8, libpcl-stereo1.8, libpcl-surface1.8, libpcl-tracking1.8, libpcl-visualization1.8]
     jessie: [libpcl1.7]
     stretch: [libpcl-apps1.8, libpcl-common1.8, libpcl-features1.8, libpcl-filters1.8, libpcl-io1.8, libpcl-kdtree1.8, libpcl-keypoints1.8, libpcl-ml1.8, libpcl-octree1.8, libpcl-outofcore1.8, libpcl-people1.8, libpcl-recognition1.8, libpcl-registration1.8, libpcl-sample-consensus1.8, libpcl-search1.8, libpcl-segmentation1.8, libpcl-stereo1.8, libpcl-surface1.8, libpcl-tracking1.8, libpcl-visualization1.8]
   fedora: [pcl, pcl-tools]
