add TOWR meta-package for documentation and CI to indigo,kinetic,lunar.

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -10089,6 +10089,16 @@ repositories:
       type: git
       url: https://github.com/tu-darmstadt-ros-pkg/topic_proxy.git
       version: master
+  towr:
+    doc:
+      type: git
+      url: https://github.com/ethz-adrl/towr.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/ethz-adrl/towr.git
+      version: master
+    status: developed
   trac_ik:
     doc:
       type: git
