--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -3893,6 +3893,16 @@ repositories:
       url: https://github.com/rst-tu-dortmund/teb_local_planner_tutorials.git
       version: lunar-devel
     status: developed
+  towr:
+    doc:
+      type: git
+      url: https://github.com/ethz-adrl/towr.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/ethz-adrl/towr.git
+      version: master
+    status: developed
   trac_ik:
     doc:
       type: git
