--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -15294,6 +15294,16 @@ repositories:
       url: https://github.com/asmodehn/tornado-rosrelease.git
       version: 4.2.1-3
     status: maintained
+  towr:
+    doc:
+      type: git
+      url: https://github.com/ethz-adrl/towr.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/ethz-adrl/towr.git
+      version: master
+    status: developed
   trac_ik:
     doc:
       type: git
