add artful/bionic keys for python, python-coverage, python-rosdep

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -182,6 +182,8 @@ python:
     slackpkg:
       packages: [python]
   ubuntu:
+    artful: [python-dev]
+    bionic: [python-dev]
     lucid: [python-dev]
     maverick: [python-dev]
     natty: [python-dev]
@@ -660,6 +662,8 @@ python-coverage:
       packages: [coverage]
   slackware: [coverage]
   ubuntu:
+    artful: [python-coverage]
+    bionic: [python-coverage]
     lucid: [python-coverage]
     maverick: [python-coverage]
     natty: [python-coverage]
@@ -2600,6 +2604,8 @@ python-rosdep:
     pip:
       packages: [rosdep]
   ubuntu:
+    artful: [python-rosdep]
+    bionic: [python-rosdep]
     lucid: [python-rosdep]
     maverick: [python-rosdep]
     natty: [python-rosdep]
