rospack: 2.5.0-0 in 'melodic/distribution.yaml' [bloom]

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -227,6 +227,22 @@ repositories:
       url: https://github.com/ros/roscpp_core.git
       version: kinetic-devel
     status: maintained
+  rospack:
+    doc:
+      type: git
+      url: https://github.com/ros/rospack.git
+      version: lunar-devel
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/rospack-release.git
+      version: 2.5.0-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/rospack.git
+      version: lunar-devel
+    status: maintained
   std_msgs:
     doc:
       type: git
