add artful/bionic keys for python-rospkg

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2716,6 +2716,8 @@ python-rospkg:
     pip:
       packages: [rospkg]
   ubuntu:
+    artful: [python-rospkg]
+    bionic: [python-rospkg]
     lucid: [python-rospkg]
     maverick: [python-rospkg]
     natty: [python-rospkg]
