--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -165,6 +165,34 @@ repositories:
       url: https://github.com/ros/message_runtime.git
       version: groovy-devel
     status: maintained
+  ros:
+    doc:
+      type: git
+      url: https://github.com/ros/ros.git
+      version: kinetic-devel
+    release:
+      packages:
+      - mk
+      - ros
+      - rosbash
+      - rosboost_cfg
+      - rosbuild
+      - rosclean
+      - roscreate
+      - roslang
+      - roslib
+      - rosmake
+      - rosunit
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/ros-release.git
+      version: 1.14.3-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/ros.git
+      version: kinetic-devel
+    status: maintained
   ros_comm_msgs:
     doc:
       type: git
