Add rosdep entry for gtk3

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1119,6 +1119,19 @@ gtk2:
     slackpkg:
       packages: [gtk+2]
   ubuntu: [libgtk2.0-dev]
+gtk3:
+  arch: [gtk3]
+  debian: [libgtk-3-dev]
+  fedora: [gtk3-devel]
+  freebsd: [gtk3]
+  gentoo: ['x11-libs/gtk+:3']
+  macports: [gtk3]
+  opensuse: [gtk3-devel]
+  rhel: [gtk3-devel]
+  slackware:
+    slackpkg:
+      packages: [gtk+3]
+  ubuntu: [libgtk-3-dev]
 gv:
   arch: [gv]
   debian: [gv]
