--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -10417,12 +10417,18 @@ repositories:
       version: master
     release:
       packages:
+      - tuw_airskin_msgs
       - tuw_gazebo_msgs
+      - tuw_geometry_msgs
       - tuw_msgs
-      - tuw_spline_msgs
+      - tuw_multi_robot_msgs
+      - tuw_nav_msgs
+      - tuw_object_msgs
+      - tuw_vehicle_msgs
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/tuw-robotics/tuw_msgs-release.git
+      version: 0.0.4-0
     source:
       type: git
       url: https://github.com/tuw-robotics/tuw_msgs.git
