Add basler_tof + volksbot_driver to lunar doc

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -146,6 +146,17 @@ repositories:
       url: https://github.com/ros-drivers/axis_camera.git
       version: master
     status: unmaintained
+  basler_tof:
+    doc:
+      type: git
+      url: https://github.com/uos/basler_tof.git
+      version: lunar
+    source:
+      test_commits: false
+      type: git
+      url: https://github.com/uos/basler_tof.git
+      version: lunar
+    status: developed
   bfl:
     release:
       tags:
@@ -4128,6 +4139,16 @@ repositories:
       url: https://github.com/ros-visualization/visualization_tutorials.git
       version: kinetic-devel
     status: maintained
+  volksbot_driver:
+    doc:
+      type: git
+      url: https://github.com/uos/volksbot_driver.git
+      version: lunar
+    source:
+      test_commits: false
+      type: git
+      url: https://github.com/uos/volksbot_driver.git
+      version: lunar
   vrpn:
     doc:
       type: git
