--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3079,18 +3079,11 @@ repositories:
     doc:
       type: git
       url: https://github.com/HLDS-GIT/hls_lfom_tof_driver.git
-      version: kinetic-devel
-    release:
-      packages:
-      - hls_lfom_tof_driver
-      tags:
-        release: release/kinetic/{package}/{version}
-      url: https://github.com/HLDS-GIT-release/hls-lfom-tof-driver-release.git
-      version: 1.0.0-0
+      version: master
     source:
       type: git
       url: https://github.com/HLDS-GIT/hls_lfom_tof_driver.git
-      version: kinetic-devel
+      version: master
     status: maintained
   hokuyo3d:
     doc:
