Adding HLDS-GIT to documentation index for distro (#16885)
* Adding HLDS-GIT to documentation index for distro

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3075,6 +3075,16 @@ repositories:
       url: https://github.com/ROBOTIS-GIT/hls_lfcd_lds_driver.git
       version: kinetic-devel
     status: maintained
+  hls-lfom-tof-driver:
+    doc:
+      type: git
+      url: https://github.com/HLDS-GIT/hls_lfom_tof_driver.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/HLDS-GIT/hls_lfom_tof_driver.git
+      version: master
+    status: maintained
   hokuyo3d:
     doc:
       type: git
