o3m151_driver: 1.2.1-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5664,6 +5664,21 @@ repositories:
       url: https://github.com/vooon/ntpd_driver.git
       version: master
     status: maintained
+  o3m151_driver:
+    doc:
+      type: git
+      url: https://github.com/labex-imobs3/ifm_o3m151.git
+      version: master
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/labex-imobs3-gbp/o3m151_driver-release.git
+      version: 1.2.1-0
+    source:
+      type: git
+      url: https://github.com/labex-imobs3/ifm_o3m151.git
+      version: master
+    status: developed
   object_recognition_capture:
     release:
       tags:
