--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6876,6 +6876,16 @@ repositories:
       type: git
       url: https://github.com/raspberrypigibbon/raspigibbon_ros.git
       version: kinetic-devel
+    release:
+      packages:
+      - futaba_serial_servo
+      - raspigibbon_bringup
+      - raspigibbon_description
+      - raspigibbon_ros
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/raspberrypigibbon/raspigibbon_ros-release.git
+      version: 0.1.1-1
     source:
       type: git
       url: https://github.com/raspberrypigibbon/raspigibbon_ros.git
