Add rosdep entries for xcursor and xkbcommon

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3255,6 +3255,9 @@ libxaw:
   opensuse: [xorg-x11-devel]
   rhel: [libXaw-devel]
   ubuntu: [libxaw7-dev]
+libxcursor-dev:
+  debian: [libxcursor-dev]
+  ubuntu: [libxcursor-dev]
 libxenomai-dev:
   debian:
     jessie: [libxenomai-dev]
@@ -3286,6 +3289,9 @@ libxinerama-dev:
   fedora: [libXinerama-devel]
   gentoo: [x11-libs/libXinerama]
   ubuntu: [libxinerama-dev]
+libxkbcommon-dev:
+  debian: [libxkbcommon-dev]
+  ubuntu: [libxkbcommon-dev]
 libxml++-2.6:
   arch: [libxml++]
   debian: [libxml++2.6-2, libxml++2.6-dev]
