--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3138,6 +3138,10 @@ libvlc-dev:
   fedora: [libvlc-devel]
   gentoo: [media-video/vlc]
   ubuntu: [libvlc-dev]
+libvlccore-dev:
+  debian: [libvlccore-dev]
+  fedora: [vlc-devel]
+  ubuntu: [libvlccore-dev]
 libvpx-dev:
   debian: [libvpx-dev]
   fedora: [libvpx-devel]
