add lz4, python-imaging, python-netifaces, python-numpy keys for melodic

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3458,6 +3458,8 @@ lz4:
   opensuse: [lz4]
   slackware: [lz4]
   ubuntu:
+    artful: [liblz4-dev]
+    bionic: [liblz4-dev]
     saucy: [liblz4-dev]
     trusty: [liblz4-dev]
     utopic: [liblz4-dev]
