--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1331,6 +1331,8 @@ python-imaging:
     slackpkg:
       packages: [python-pillow]
   ubuntu:
+    artful: [python-imaging]
+    bionic: [python-imaging]
     lucid: [python-imaging]
     maverick: [python-imaging]
     natty: [python-imaging]
@@ -1666,6 +1668,8 @@ python-netifaces:
       packages: [netifaces]
   slackware: [netifaces]
   ubuntu:
+    artful: [python-netifaces]
+    bionic: [python-netifaces]
     lucid: [python-netifaces]
     maverick: [python-netifaces]
     natty: [python-netifaces]
@@ -1763,6 +1767,8 @@ python-numpy:
   rhel: [numpy]
   slackware: [numpy]
   ubuntu:
+    artful: [python-numpy]
+    bionic: [python-numpy]
     lucid: [python-numpy]
     maverick: [python-numpy]
     natty: [python-numpy]
