add python-imaging for Fedora 27/28

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1315,6 +1315,8 @@ python-imaging:
     '24': [python-pillow, python-pillow-qt]
     '25': [python-pillow, python-pillow-qt]
     '26': [python-pillow, python-pillow-qt]
+    '27': [python-pillow, python-pillow-qt]
+    '28': [python-pillow, python-pillow-qt]
     beefy: [python-imaging]
     heisenbug: [python-pillow, python-pillow-qt]
     schrödinger’s: [python-pillow, python-pillow-qt]
