add python-psutil for melodic

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2082,6 +2082,8 @@ python-psutil:
       packages: [psutil]
   slackware: [psutil]
   ubuntu:
+    artful: [python-psutil]
+    bionic: [python-psutil]
     lucid: [python-psutil]
     maverick: [python-psutil]
     natty: [python-psutil]
