add doc job for vision_msgs on lunar

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -4059,6 +4059,10 @@ repositories:
       version: master
     status: maintained
   vision_msgs:
+    doc:
+      type: git
+      url: https://github.com/Kukanani/vision_msgs.git
+      version: lunar-devel
     release:
       tags:
         release: release/lunar/{package}/{version}
