Adding move_base_flex to documentation index for kinetic

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -4852,6 +4852,16 @@ repositories:
       url: https://github.com/ros-industrial/motoman_experimental.git
       version: kinetic-devel
     status: developed
+  move_base_flex:
+    doc:
+      type: git
+      url: https://github.com/magazino/move_base_flex.git
+      version: kinetic
+    source:
+      type: git
+      url: https://github.com/magazino/move_base_flex.git
+      version: kinetic
+    status: maintained
   move_base_to_manip:
     doc:
       type: git
