[melodic] add bond source entry

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -11,6 +11,17 @@ release_platforms:
   - artful
   - bionic
 repositories:
+  bond_core:
+    doc:
+      type: git
+      url: https://github.com/ros/bond_core.git
+      version: kinetic-devel
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/bond_core.git
+      version: kinetic-devel
+    status: maintained
   catkin:
     doc:
       type: git
