--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -27,6 +27,17 @@ repositories:
       url: https://github.com/ros/catkin.git
       version: kinetic-devel
     status: maintained
+  class_loader:
+    doc:
+      type: git
+      url: https://github.com/ros/class_loader.git
+      version: melodic-devel
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/class_loader.git
+      version: melodic-devel
+    status: maintained
   cmake_modules:
     doc:
       type: git
