[melodic] add dynamic_reconfigure source entry

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -65,6 +65,17 @@ repositories:
       url: https://github.com/ros/cmake_modules.git
       version: 0.4-devel
     status: maintained
+  dynamic_reconfigure:
+    doc:
+      type: git
+      url: https://github.com/ros/dynamic_reconfigure.git
+      version: melodic-devel
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/dynamic_reconfigure.git
+      version: melodic-devel
+    status: maintained
   gencpp:
     doc:
       type: git
