--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5085,7 +5085,7 @@ repositories:
       url: https://github.com/christianrauch/msp.git
       version: master
     status: developed
-  multi_jackal-release:
+  multi_jackal:
     release:
       packages:
       - multi_jackal_base
@@ -5095,11 +5095,11 @@ repositories:
       - multi_jackal_tutorials
       tags:
         release: release/kinetic/{package}/{version}
-      url: https://github.com/NicksSimulationsROS/multi_jackal-release
+      url: https://github.com/NicksSimulationsROS/multi_jackal-release.git
       version: 0.0.1-0
     source:
       type: git
-      url: https://github.com/NicksSimulationsROS/multi_jackal
+      url: https://github.com/NicksSimulationsROS/multi_jackal.git
       version: ros-kinetic
     status: developed
   multikey_teleop:
