--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5095,6 +5095,23 @@ repositories:
       url: https://github.com/christianrauch/msp.git
       version: master
     status: developed
+  multi_jackal:
+    release:
+      packages:
+      - multi_jackal_base
+      - multi_jackal_control
+      - multi_jackal_description
+      - multi_jackal_nav
+      - multi_jackal_tutorials
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/NicksSimulationsROS/multi_jackal-release.git
+      version: 0.0.1-0
+    source:
+      type: git
+      url: https://github.com/NicksSimulationsROS/multi_jackal.git
+      version: ros-kinetic
+    status: developed
   multikey_teleop:
     release:
       tags:
