[rosdep] adding python-netaddr for recent ubuntu

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1657,6 +1657,9 @@ python-netaddr:
     trusty_python3: [python3-netaddr]
     utopic: [python-netaddr]
     vivid: [python-netaddr]
+    xenial: [python-netaddr]
+    yakkety: [python-netaddr]
+    zesty: [python-netaddr]
 python-netifaces:
   arch: [python2-netifaces]
   debian: [python-netifaces]
