adding artful and bionic

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1660,6 +1660,8 @@ python-netaddr:
     xenial: [python-netaddr]
     yakkety: [python-netaddr]
     zesty: [python-netaddr]
+    artful: [python-netaddr]
+    bionic: [python-netaddr]
 python-netifaces:
   arch: [python2-netifaces]
   debian: [python-netifaces]
