--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -11,6 +11,22 @@ release_platforms:
   - artful
   - bionic
 repositories:
+  angles:
+    doc:
+      type: git
+      url: https://github.com/ros/angles.git
+      version: master
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/geometry_angles_utils-release.git
+      version: 1.9.11-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/angles.git
+      version: master
+    status: maintained
   bond_core:
     doc:
       type: git
