[rosdep] adding python-netaddr for recent ubuntu (#16933)
* [rosdep] adding python-netaddr for recent ubuntu

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1633,6 +1633,8 @@ python-netaddr:
     pip:
       packages: [netaddr]
   ubuntu:
+    artful: [python-netaddr]
+    bionic: [python-netaddr]
     lucid: [python-netaddr]
     maverick:
       pip:
@@ -1657,6 +1659,9 @@ python-netaddr:
     trusty_python3: [python3-netaddr]
     utopic: [python-netaddr]
     vivid: [python-netaddr]
+    xenial: [python-netaddr]
+    yakkety: [python-netaddr]
+    zesty: [python-netaddr]
 python-netifaces:
   arch: [python2-netifaces]
   debian: [python-netifaces]
