fixed syntax error

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -39,7 +39,7 @@ cython:
   fedora: [Cython]
   gentoo: [dev-python/cython]
   ubuntu: [cython]
-dpath-pip
+dpath-pip:
   ubuntu:
     pip:
       packages: [dpath]
