added dpath package for Filesystem-like pathing and searching for dict (#16941)
* added dpath package for Filesystem-like pathing and searching for dictionaries

* fixed syntax error

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -39,6 +39,10 @@ cython:
   fedora: [Cython]
   gentoo: [dev-python/cython]
   ubuntu: [cython]
+dpath-pip:
+  ubuntu:
+    pip:
+      packages: [dpath]
 ds4drv-pip:
   ubuntu:
     pip:
