--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -4125,6 +4125,10 @@ rsync:
   gentoo: [net-misc/rsync]
   opensuse: [rsync]
   ubuntu: [rsync]
+rtmidi:
+  debian: [librtmidi-dev]
+  fedora: [rtmidi-devel]
+  ubuntu: [librtmidi-dev]
 sbcl:
   arch: [sbcl]
   debian: [sbcl]
