[lunar] ecl_tools -> maintained

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -593,7 +593,7 @@ repositories:
     source:
       type: git
       url: https://github.com/stonier/ecl_tools.git
-      version: devel
+      version: release/0.61-lunar
     status: maintained
   ecto:
     release:
