Add debian resolution for python3-yaml.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3900,6 +3900,7 @@ python3-venv:
   debian: [python3-venv]
   ubuntu: [python3-venv]
 python3-yaml:
+  debian: [python3-yaml]
   gentoo: [dev-python/pyyaml]
   ubuntu: [python3-yaml]
 rosbag-metadata-pip:
