Resolve Gentoo keys for clang-format and pyflakes3.

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -377,6 +377,7 @@ clang-format:
   debian:
     buster: [clang-format]
     stretch: [clang-format]
+  gentoo: [sys-devel/clang]
   ubuntu:
     xenial: [clang-format]
 cmake:
