--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -124,6 +124,7 @@ pyflakes3:
   debian:
     buster: [pyflakes3]
     stretch: [pyflakes3]
+  gentoo: [dev-python/pyflakes]
   ubuntu:
     artful: [pyflakes3]
     bionic: [pyflakes3]
