Add Gentoo Missing Gentoo dependencies (#16976)
* Add Gentoo Missing Gentoo dependencies

* Add debian resolution for python3-yaml.

* Resolve Gentoo keys for clang-format and pyflakes3.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -124,6 +124,7 @@ pyflakes3:
   debian:
     buster: [pyflakes3]
     stretch: [pyflakes3]
+  gentoo: [dev-python/pyflakes]
   ubuntu:
     artful: [pyflakes3]
     bionic: [pyflakes3]
@@ -3847,21 +3848,25 @@ python3-empy:
     buster: [python3-empy]
     jessie: [python3-empy]
     stretch: [python3-empy]
+  gentoo: [dev-python/empy]
   ubuntu: [python3-empy]
 python3-flake8:
   debian:
     buster: [python3-flake8]
     jessie: [python3-flake8]
     stretch: [python3-flake8]
+  gentoo: [dev-python/flake8]
   ubuntu: [python3-flake8]
 python3-nose:
   debian: [python3-nose]
+  gentoo: [dev-python/nose]
   ubuntu: [python3-nose]
 python3-pep8:
   debian:
     buster: [python3-pep8]
     jessie: [python3-pep8]
     stretch: [python3-pep8]
+  gentoo: [dev-python/pep8]
   ubuntu: [python3-pep8]
 python3-pkg-resources:
   debian: [python3-pkg-resources]
@@ -3890,11 +3895,14 @@ python3-ruamel.yaml:
     zesty: [python3-ruamel.yaml]
 python3-setuptools:
   debian: [python3-setuptools]
+  gentoo: [dev-python/setuptools]
   ubuntu: [python3-setuptools]
 python3-venv:
   debian: [python3-venv]
   ubuntu: [python3-venv]
 python3-yaml:
+  debian: [python3-yaml]
+  gentoo: [dev-python/pyyaml]
   ubuntu: [python3-yaml]
 rosbag-metadata-pip:
   debian:
