Switch status for move_base_flex in distro kinetic to developed (#16996)

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -4866,7 +4866,7 @@ repositories:
       type: git
       url: https://github.com/magazino/move_base_flex.git
       version: kinetic
-    status: maintained
+    status: developed
   move_base_to_manip:
     doc:
       type: git
