class_loader: 0.4.0-0 in 'melodic/distribution.yaml' [bloom]

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -59,6 +59,11 @@ repositories:
       type: git
       url: https://github.com/ros/class_loader.git
       version: melodic-devel
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/class_loader-release.git
+      version: 0.4.0-0
     source:
       test_pull_requests: true
       type: git
