added octomap_pa to indexer for indigo, kinetic and lunar   this package is the TUC-ProAut decay extention to the octomap package

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -2067,6 +2067,16 @@ repositories:
       url: https://github.com/OctoMap/octomap_msgs.git
       version: lunar-devel
     status: maintained
+  octomap_pa:
+    doc:
+      type: git
+      url: https://github.com/TUC-ProAut/ros_octomap.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/TUC-ProAut/ros_octomap.git
+      version: master
+    status: maintained
   octomap_ros:
     doc:
       type: git
