--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -8415,6 +8415,16 @@ repositories:
       url: https://github.com/OctoMap/octomap_msgs.git
       version: indigo-devel
     status: maintained
+  octomap_pa:
+    doc:
+      type: git
+      url: https://github.com/TUC-ProAut/ros_octomap.git
+      version: indigo
+    source:
+      type: git
+      url: https://github.com/TUC-ProAut/ros_octomap.git
+      version: indigo
+    status: maintained
   octomap_ros:
     doc:
       type: git
