--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5888,6 +5888,16 @@ repositories:
       url: https://github.com/OctoMap/octomap_msgs.git
       version: kinetic-devel
     status: maintained
+  octomap_pa:
+    doc:
+      type: git
+      url: https://github.com/TUC-ProAut/ros_octomap.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/TUC-ProAut/ros_octomap.git
+      version: master
+    status: maintained
   octomap_ros:
     doc:
       type: git
