Add keys for cpprest (#17020)
* Add cpprest keys

* libcpprest-dev add yakkety removed sid

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1494,6 +1494,17 @@ libconsole-bridge-dev:
   opensuse: [libconsole_bridge0]
   slackware: [console_bridge]
   ubuntu: [libconsole-bridge-dev]
+libcpprest-dev:
+  debian:
+    buster: [libcpprest-dev]
+    stretch: [libcpprest-dev]
+  fedora: [cpprest-devel]
+  ubuntu:
+    artful: [libcpprest-dev]
+    bionic: [libcpprest-dev]
+    xenial: [libcpprest-dev]
+    yakkety: [libcpprest-dev]
+    zesty: [libcpprest-dev]
 libdbus-dev:
   arch: [dbus-core]
   debian: [libdbus-1-dev]
