Adding yoctopuce_altimeter to documentation index for kinetic (#16992)
* Adding yoctopuce_altimeter to documentation index for kinetic

* Adding updated yoctopuce_altimeter to documentation index for kinetic

* Fixed trailing whitespace.

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -11760,6 +11760,16 @@ repositories:
       url: https://github.com/yujinrobot/yocs_msgs.git
       version: kinetic
     status: developed
+  yoctopuce_altimeter:
+    doc:
+      type: git
+      url: https://github.com/amstrudy/yoctopuce_altimeter.git
+      version: kinetic
+    source:
+      type: git
+      url: https://github.com/amstrudy/yoctopuce_altimeter.git
+      version: kinetic
+    status: maintained
   youbot_description:
     doc:
       type: git
