Adding realsense_ros_camera to documentation index for Kinetic and Indigo distro (#17045)
* Adding realsense2_camera

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -10730,6 +10730,12 @@ repositories:
       url: https://github.com/timn/ros-rcll_ros_msgs.git
       version: master
     status: developed
+  realsense2_camera:
+    doc:
+      type: git
+      url: https://github.com/intel-ros/realsense.git
+      version: development
+    status: maintained
   realsense_camera:
     doc:
       type: git
