--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7358,6 +7358,12 @@ repositories:
       url: https://gitlab.com/jlack/rdl.git
       version: master
     status: developed
+  realsense2_camera:
+    doc:
+      type: git
+      url: https://github.com/intel-ros/realsense.git
+      version: development
+    status: maintained
   realsense_camera:
     doc:
       type: git
