add kaitaistruct for pip

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1421,6 +1421,10 @@ python-jsonschema-pip:
   ubuntu:
     pip:
       packages: [jsonschema]
+python-kaitaistruct-pip:
+  ubuntu:
+    pip:
+      packages: [kaitaistruct]
 python-kdtree:
   debian:
     buster: [python-kdtree]
