[melodic] add pluginlib source  and doc entries

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -287,6 +287,17 @@ repositories:
       url: https://github.com/ros/message_runtime.git
       version: groovy-devel
     status: maintained
+  pluginlib:
+    doc:
+      type: git
+      url: https://github.com/ros/pluginlib.git
+      version: melodic-devel
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/pluginlib.git
+      version: melodic-devel
+    status: maintained
   python_qt_binding:
     doc:
       type: git
