Adding python-gpxpy (#17067)
* Adding python-gpxpy

* remove sid as its a rolling distro we dont target

* Adding gpxpy for gentoo

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1212,6 +1212,38 @@ python-gpiozero:
       pip:
         packages: [gpiozero]
     zesty: [python-gpiozero]
+python-gpxpy:
+  debian:
+    buster: [python-gpxpy]
+    jessie:
+      pip:
+        packages: [gpxpy]
+    stretch: [python-gpxpy]
+  gentoo: [sci-geosciences/gpxpy]
+  ubuntu:
+    artful: [python-gpxpy]
+    bionic: [python-gpxpy]
+    trusty:
+      pip:
+        packages: [gpxpy]
+    utopic:
+      pip:
+        packages: [gpxpy]
+    vivid:
+      pip:
+        packages: [gpxpy]
+    wily:
+      pip:
+        packages: [gpxpy]
+    xenial:
+      pip:
+        packages: [gpxpy]
+    yakkety:
+      pip:
+        packages: [gpxpy]
+    zesty:
+      pip:
+        packages: [gpxpy]
 python-graphviz-pip:
   debian:
     pip:
