--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -244,6 +244,13 @@ repositories:
       url: https://github.com/marc-hanheide/PetriNetPlans.git
       version: catkinised
     status: developed
+  rasberry:
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/lcas/rasberry.git
+      version: master
+    status: developed
   robomongo_ros:
     source:
       type: git
