--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -645,6 +645,13 @@ repositories:
       url: https://github.com/strands-project/strands_webtools.git
       version: kinetic-devel
     status: developed
+  thorvald:
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/lcas/thorvald.git
+      version: kinetic-devel
+    status: developed
   thin_navigation:
     release:
       tags:
