--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1957,6 +1957,10 @@ libicu-dev:
   fedora: [libicu-devel]
   gentoo: [dev-libs/icu]
   ubuntu: [libicu-dev]
+libimage-exiftool-perl:
+  arch: [perl-image-exiftool]
+  debian: [libimage-exiftool-perl]
+  ubuntu: [libimage-exiftool-perl]  
 libirrlicht-dev:
   arch: [irrlicht]
   debian: [libirrlicht-dev]
