Update base.yaml: libimage-exiftool-perl
added gentoo, fixed trailing whitespaces

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1960,7 +1960,8 @@ libicu-dev:
 libimage-exiftool-perl:
   arch: [perl-image-exiftool]
   debian: [libimage-exiftool-perl]
-  ubuntu: [libimage-exiftool-perl]  
+  gentoo: [media-libs/exiftool]
+  ubuntu: [libimage-exiftool-perl]
 libirrlicht-dev:
   arch: [irrlicht]
   debian: [libirrlicht-dev]
