Added libimage-exiftool-perl (#17080)
* Update base.yaml

added libimage-exiftool-perl for
  arch, debian and ubuntu

* Update base.yaml: libimage-exiftool-perl

added gentoo, fixed trailing whitespaces

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1957,6 +1957,11 @@ libicu-dev:
   fedora: [libicu-devel]
   gentoo: [dev-libs/icu]
   ubuntu: [libicu-dev]
+libimage-exiftool-perl:
+  arch: [perl-image-exiftool]
+  debian: [libimage-exiftool-perl]
+  gentoo: [media-libs/exiftool]
+  ubuntu: [libimage-exiftool-perl]
 libirrlicht-dev:
   arch: [irrlicht]
   debian: [libirrlicht-dev]
