--- a/kinetic/lcas-dist.yaml
+++ b/kinetic/lcas-dist.yaml
@@ -429,6 +429,13 @@ repositories:
       url: https://github.com/lcas/spqrel_navigation.git
       version: master
     status: maintained
+  steering_functions:
+    source:
+      test_commits: true
+      type: git
+      url: https://github.com/iliad-project/steering_functions.git
+      version: iliad
+    status: maintained
   strands_apps:
     release:
       packages:
